# Tandem

./: .gitignore  README.md  pyproject.toml  requirements.txt
reports/: project_summary.md  tandem_rlvr_report.md
src/tandem_rlvr/: __init__.py
src/tandem_rlvr/agents/: __init__.py  base.py  oracle.py  random_agent.py  weak_junior.py
src/tandem_rlvr/agents/llm/: __init__.py  config.py  handoff_strategies.py  (+3 more)
src/tandem_rlvr/analysis/: __init__.py  load_results.py  plots.py  report.py
src/tandem_rlvr/eval/: __init__.py  metrics.py  perturbations.py  runner.py
src/tandem_rlvr/experiments/: run_stage1_baseline.py  run_stage2_baseline.py  run_stage3_llm_eval.py  run_stage4_process_metrics.py  run_stage5_generalization_eval.py  run_stage6_handoff_policy_optimization.py  run_stage7_generate_report.py
src/tandem_rlvr/metrics/: __init__.py  leakage.py  legibility.py  process_reward.py  relevance.py
src/tandem_rlvr/rl/: __init__.py  bandit.py  policy.py  rewards.py
src/tandem_rlvr/tasks/: __init__.py  arithmetic.py  base.py  code_tracing.py  list_transformations.py  logic.py  splits.py  verifiers.py
src/tandem_rlvr/utils/: io.py
tests/: test_agents.py  test_arithmetic_tasks.py  test_eval_runner.py  test_llm_parsing.py  test_llm_prompts.py  test_ollama_agent.py  test_perturbations.py  test_stage2_eval.py  test_stage2_experiment.py  test_stage2_tasks.py  test_stage2_verifiers.py  test_stage3_experiment.py  test_stage4_metrics.py  test_stage5_generalization.py  test_stage5_splits.py  test_stage6_handoff_policy.py  test_stage7_analysis.py  test_verifiers.py
